# solved_coderbyte_coding_challenges

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
1_easy_difficulty_level/: 01_first_reverse.cpp  02_first_factorial.cpp  03_longest_word.cpp  04_letter_changes.cpp  05_simple_adding.cpp  06_letter_capitalize.cpp  07_simple_symbols.cpp  08_check_nums.cpp  09_time_convert.cpp  10_alphabet_soup.cpp  11_ab_check.cpp  12_vowel_count.cpp  13_word_count.cpp  14_ex_oh.cpp  15_palindrome.cpp  16_arith_geo.cpp  17_array_addition_I.cpp  17_array_addition_I_v1.cpp  17_array_addition_I_v2.cpp  17_array_addition_I_v3.cpp  18_letter_count.cpp  19_second_greatlow.cpp  20_division_stringified.cpp  21_counting_minutes_i.cpp  22_mean_mode.cpp  23_dash_insert.cpp  24_swap_case.cpp  25_number_addition.cpp  26_third_greatest.cpp  27_powers_of_two.cpp  28_additive_persistence.cpp  29_multiplicative_persistence.cpp  30_off_line_minimum.cpp  31_changing_sequence.cpp  32_overlapping_ranges.cpp  33_superincreasing.cpp  34_hamming_distance.cpp  35_rectangle_area.cpp  36_bitwise_one.cpp  37_other_products.cpp  (+64 more)
2_medium_difficulty_level/: 01_prime_time.cpp  02_run_length.cpp  03_prime_mover.cpp  04_palindrome_two.cpp  05_division.cpp  06_string_scramble.cpp  07_arith_geo_ii.cpp  08_array_addition.cpp  09_binary_converter.cpp  10_letter_count.cpp  11_simple_mode.cpp  12_caesar_cipher.cpp  13_formatted_division.cpp  14_consecutive.cpp  15_counting_minutes.cpp  16_permutation_step.cpp  17_prime_checker.cpp  18_dash_insert_II.cpp  19_swap_ii.cpp  20_number_search.cpp  21_triple_double.cpp  22_bracket_matcher.cpp  23_string_reduction.cpp  24_coin_determiner.cpp  25_threefive_multiples.cpp  26_fibonacci_checker.cpp  27_multiple_brackets.cpp  28_most_free_time.cpp  29_overlapping_rectangles.cpp  30_distinct_list.cpp  31_look_say_sequence.cpp  32_longest_valid_parentheses.cpp  32_number_encoding.cpp  33_stock_picker.cpp  34_max_subarray.cpp  35_missing_digit.cpp  36_k_unique_characters.cpp  37_bitmap_holes.cpp  37_bitmap_holes_v1.cpp  37_bitmap_holes_v2.cpp  (+67 more)
3_hard_difficulty_level/: 01_shortest_path.cpp  03_calculator.cpp  (+73 more)
(+4 files in other folders)
